fix: Slider in time setting not visible in smaller window size

--- a/app/styles/overrides.scss
+++ b/app/styles/overrides.scss
@@ -1,5 +1,13 @@
 // Blueprint
 
+.pt-slider {
+  width: 90%;
+}
+
+.pt-tab-panel {
+  overflow: hidden;
+}
+
 // We do not want to show the hour so this is some hacky way to
 // not display the hour
 .pt-timepicker-hour {
